2000-09-08  Gene Z. Ragan  <gzr@eazel.com>

	Fixed bug 2839, setting icons for mime type is not remembered
	
	* mime-type-capplet/nautilus-mime-type-capplet.c: (main),
	(init_mime_capplet), (nautilus_mime_type_capplet_update_info),
	(populate_mime_list),
	(nautilus_mime_type_capplet_get_selected_item_mime_type):
	Removed icon setting code callback from Change Icon button.
	
	* mime-type-capplet/nautilus-mime-type-icon-entry.c:
	(icon_selected_cb), (cancel_pressed), (gil_icon_selected_cb),
	(nautilus_mime_type_show_icon_selection):
	Added gnome-vfs icon setting code to OK button callback.

2000-09-08  Maciej Stachowiak  <mjs@eazel.com>

	* data/mime/Makefile.am: Don't attempt to build binary version of
	mime database.

	* gnome-vfs.spec.in: Don't include gnome-vfs-genmimedb or the
	binary version of the mime database that it generates.
	
2000-09-08  Gene Z. Ragan  <gzr@eazel.com>

	Fixed bug 2766, viewer menu code is not finished.

	Enjoy your Content Loser.
	
	* mime-type-capplet/nautilus-mime-type-capplet.c:
	(populate_viewer_menu):
	Made function work.

2000-09-08  Gene Z. Ragan  <gzr@eazel.com>

	Fixed bug 2789, Need to cancel non-file drags in icon
	entry field.
	
	* mime-type-capplet/nautilus-mime-type-icon-entry.c:
	(drag_data_get):

2000-09-07  Dan Winship  <danw@helixcode.com>

	* data/mime/gnome-vfs.keys: lowercasify the handful of
	descriptions that started with a capital letter that wasn't part
	of a proper name. Rewrite a few descriptions to be more correct or
	more user-friendly. Add comments pointing out duplicated entries
	(like image/png and image/x-png) that need to be kept in sync.

2000-09-08  Ian McKellar  <yakk@yakk.net.au>

	* modules/http-method.c: (make_request):
	Implemented custom user-agent headers - specified by the
	GNOME_VFS_HTTP_USER_AGENT environment variable.

2000-09-06  Pavel Cisler  <pavel@eazel.com>

	* configure.in:
	Get rid of -Wno-uninitialized. This way we will get uninitialized